crates/hir-ty/tests/snapshots/poly_snapshots__overload_set_iterable_collection_list.snap
---
source: crates/hir-ty/tests/poly_snapshots.rs
expression: out
---
FILE /src/org/example/assertions/A.java:
package org.example.assertions;

public class A {
    public static <T> NT<T> assertThat(T actual) { return null; }
    public static <ELEMENT> NA<ELEMENT> assertThat(java.lang.Iterable<? extends ELEMENT> actual) { return null; }
    public static <E> NB<E> assertThat(java.util.Collection<? extends E> actual) { return null; }
    public static <ELEMENT> NC<ELEMENT> assertThat(java.util.List<? extends ELEMENT> actual) { return null; }
}

FILE /src/org/example/assertions/NA.java:
package org.example.assertions;

public class NA<T> {
    public NA<T> hasSize(int n) { return this; }
}

FILE /src/org/example/assertions/NB.java:
package org.example.assertions;

public class NB<T> {
    public NB<T> hasSize(int n) { return this; }
}

FILE /src/org/example/assertions/NC.java:
package org.example.assertions;

public class NC<T> {
    public NC<T> hasSize(int n) { return this; }
}

FILE /src/org/example/assertions/NT.java:
package org.example.assertions;

public class NT<T> {
    public NT<T> isEqualTo(Object o) { return this; }
}

FILE /src/com/example/Body.java:
package com.example;

import static org.example.assertions.A.assertThat;

import java.util.ArrayList;
import java.util.List;

class Body {
    void check(List<String> names) {
        assertThat(names).hasSize(3);
    }
}

method assertThat(T): org.example.assertions.NT<T>
  locals: l0: T
  exprs: e0: null
method assertThat(java.lang.Iterable<? extends ELEMENT>): org.example.assertions.NA<ELEMENT>
  locals: l1: java.lang.Iterable<? extends ELEMENT>
  exprs: e1: null
method assertThat(java.util.Collection<? extends E>): org.example.assertions.NB<E>
  locals: l2: java.util.Collection<? extends E>
  exprs: e2: null
method assertThat(java.util.List<? extends ELEMENT>): org.example.assertions.NC<ELEMENT>
  locals: l3: java.util.List<? extends ELEMENT>
  exprs: e3: null
method hasSize(int): org.example.assertions.NA<T>
  locals: l0: int
  exprs: e0: org.example.assertions.NA<T>
method hasSize(int): org.example.assertions.NB<T>
  locals: l0: int
  exprs: e0: org.example.assertions.NB<T>
method hasSize(int): org.example.assertions.NC<T>
  locals: l0: int
  exprs: e0: org.example.assertions.NC<T>
method isEqualTo(java.lang.Object): org.example.assertions.NT<T>
  locals: l0: java.lang.Object
  exprs: e0: org.example.assertions.NT<T>
method check(java.util.List<java.lang.String>): void
  locals: l0: java.util.List<java.lang.String>
  exprs: e0: int | e1: java.util.List<java.lang.String> | e2: org.example.assertions.NC<java.lang.String> | e3: org.example.assertions.NC<java.lang.String>
