crates/hir-ty/tests/snapshots/poly_snapshots__static_import_overloads.snap
---
source: crates/hir-ty/tests/poly_snapshots.rs
expression: out
---
FILE /src/org/example/assertions/A.java:
package org.example.assertions;

public class A {
    public static <T> NA<T> assertThat(java.lang.Iterable<? extends T> actual) { return null; }
    public static <T> NP<T> assertThat(java.util.function.Predicate<T> actual) { return null; }
    public static <T> NT<T> assertThat(T actual) { return null; }
    public static NB assertThat(boolean actual) { return null; }
    public static NI assertThat(int actual) { return null; }
}

FILE /src/org/example/assertions/NA.java:
package org.example.assertions;

public class NA<T> {
    public NA<T> hasSize(int n) { return this; }
}

FILE /src/org/example/assertions/NP.java:
package org.example.assertions;

public class NP<T> {
    public NP<T> accepts(String s) { return this; }
}

FILE /src/org/example/assertions/NT.java:
package org.example.assertions;

public class NT<T> {
    public NT<T> isEqualTo(Object o) { return this; }
}

FILE /src/org/example/assertions/NB.java:
package org.example.assertions;

public class NB {
}

FILE /src/org/example/assertions/NI.java:
package org.example.assertions;

public class NI {
    public NI isEqualTo(int n) { return this; }
}

FILE /src/com/example/Body.java:
package com.example;

import static org.example.assertions.A.assertThat;

import java.util.ArrayList;
import java.util.List;

class Body {
    void check(List<String> names) {
        assertThat(names).hasSize(3);
        assertThat(names.size()).isEqualTo(3);
        int count = 10;
        assertThat(count);
    }
}

method assertThat(java.lang.Iterable<? extends T>): org.example.assertions.NA<T>
  locals: l0: java.lang.Iterable<? extends T>
  exprs: e0: null
method assertThat(java.util.function.Predicate<T>): org.example.assertions.NP<T>
  locals: l1: java.util.function.Predicate<T>
  exprs: e1: null
method assertThat(T): org.example.assertions.NT<T>
  locals: l2: T
  exprs: e2: null
method assertThat(boolean): org.example.assertions.NB
  locals: l3: boolean
  exprs: e3: null
method assertThat(int): org.example.assertions.NI
  locals: l4: int
  exprs: e4: null
method hasSize(int): org.example.assertions.NA<T>
  locals: l0: int
  exprs: e0: org.example.assertions.NA<T>
method accepts(java.lang.String): org.example.assertions.NP<T>
  locals: l0: java.lang.String
  exprs: e0: org.example.assertions.NP<T>
method isEqualTo(java.lang.Object): org.example.assertions.NT<T>
  locals: l0: java.lang.Object
  exprs: e0: org.example.assertions.NT<T>
method isEqualTo(int): org.example.assertions.NI
  locals: l0: int
  exprs: e0: org.example.assertions.NI
method check(java.util.List<java.lang.String>): void
  locals: l0: java.util.List<java.lang.String> | l1: int
  exprs: e0: int | e1: java.util.List<java.lang.String> | e2: org.example.assertions.NA<java.lang.String> | e3: org.example.assertions.NA<java.lang.String> | e4: int | e5: java.util.List<java.lang.String> | e6: int | e7: org.example.assertions.NI | e8: org.example.assertions.NI | e9: int | e10: int | e11: org.example.assertions.NI
