crates/hir-ty/tests/snapshots/poly_snapshots__super_ctor_call.snap
---
source: crates/hir-ty/tests/poly_snapshots.rs
expression: out
---
FILE /src/com/example/Body.java:
package com.example;

class Body extends org.example.Base {
    Body() {
        super(1);
    }

    Body(int extra) {
        super(extra);
    }
}

method Body(): <init>
  locals: 
  exprs: e0: int | e1: void
method Body(int): <init>
  locals: l0: int
  exprs: e2: int | e3: void
